--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Nicholas Weaver
+title: Skerry Technologies
 description: >- # this means to ignore newlines until "baseurl:"
 Nicholas Weaver's Skerry Technologies: Mad Science in Action  
 baseurl: ""
