--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,7 @@ markdown: kramdown
 incremental: true
 
 keep_files: [.git, CNAME]
+remote_theme: pages-themes/modernist@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
