--- a/_config.yml
+++ b/_config.yml
@@ -15,4 +15,5 @@ keep_files: [.git, CNAME]
 remote_theme: pages-themes/modernist@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+exclude: book
 
